v0.8 - Refactoring Actions (#125)
* chore: update to v0.8

* remove old action implementation from codebase

* remove old action implementation from database

* Refactor quest actions (#113)

* add rough outline of quest action implementation

* fixed serialisation of QuestStage

DANGER: now the stages map can be empty and entry points can be null. This should just mean nothing happens when quest is started. But need to make sure it's not gonna try to do things on a null entry point.

* remove unused QuestStage.entryPoint

it's incorrectly formed anyway, according to the plan multiple actions need to be able to run at the same time

* refactor to use ActionData for context management

benefit being not inherently coupling with QuestClient

* add discrete stage/npc IDs

* remove default stage

* add 'add action' to quest stage editor

* add missing classes

* add dynamic action buttons

* fix missing @return javadoc in GUIFrame

* change ActionListener type

* add actioneditor and fix action deserialisation

* split actiondata and questerdata for 'next action' button

* move action id to ActionData

* add next action editor

* fix index out of range for action segment of StagePath

* implement selecting startpoints

* add quest startpoints

* add creating 'QuestClient's

* add creating/removing QuestClient on (dis)connection

* add client side BlockNPCs

* add 'edit action options' screen

* implement action type selector screen

* fix up missing/incorrect javadoc

* fixed unselecting in 'next action editor'

* implement ActionOption configuration + demo NPCOption

* only show options editor if action has options

* show selected action type (action editor)

* add missing javadoc in QuestAction.createSlot

* protect against null 'startpoints'

* implement changing action types

* add barrier above blockNPCs

* remove unused player var

* protect against null ActionData.getNextActions

* clean up unused variables/values

* optimise db connection in removeQuest

* only